--- a/Login-page/src/app/register/register.component.css
+++ b/Login-page/src/app/register/register.component.css
@@ -1,128 +1,5 @@
-
-html {
-    background: linear-gradient(to left , #edf5e1 ,#379683 ) ;
-}
-
-.wrapper {
-    width: 70vw;
-    height: 75vh;
-    position: relative;
-    margin: auto;
-    top: 10vh;
-    /* background-color: aquamarine; */
-    display: flex;
-    min-width: 600px;
-}
-
-.container-l {
-    display: inline-block;
-    height: 100%;
-    width: 40%;
-    background-color: #379683;
-}
-
-.container-r {
-    display: inline-block;
-    height: 100%;
-    width: 60%;
-    background-color: #edf5e1;
-}
-
-nav {
-    padding: 20px;
-}
-
-.logo {
-    position: absolute;
+.width400 {
+    max-width: 400px;
 }
 
 
-.salutation-l {
-    font-family: 'Crete Round', serif;
-    padding: 20px 30px;
-    text-align: center;
-    /* background-color: blue; */
-    color: #edf5e1;
-    margin-top: 20%;
-    font-size: 2em;
-}
-
-.text {
-    padding: 25px;
-    margin-top: 8%;;
-    margin-bottom: 20%;
-    color: #edf5e1;
-    width: 45%;
-    /* background-color: tomato; */
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.btn {
-    position: relative;
-    align-content: center;
-    display: flex;
-}
-
-/* button {
-    position: relative;
-    margin: auto;
-    height: 40px;
-    border-radius: 3ch;
-    width: 200px;
-} */
-
-.btn1 {
-    border: 2px solid #edf5e1;
-    color: #edf5e1;
-    background: transparent;
-    position: relative;
-    margin: auto;
-    height: 40px;
-    border-radius: 3ch;
-    width: 200px;
-}
-
-.btn2 {
-    border: 2px solid #379683;
-    background: #379683;
-    color: #edf5e1;
-    position: relative;
-    margin: auto;
-    height: 40px;
-    border-radius: 3ch;
-    width: 200px;
-}
-
-.salutation-r {
-    font-family: 'Acme', sans-serif;
-
-    color: #379683;
-    text-align: center;
-    padding: 30px;
-    margin-top: 15%;
-    margin-bottom: 4%;
-    font-size: 1.8em;
-
-}
-
-.form-wrapper {
-    /* background-color: darkkhaki; */
-    padding: 30px;
-    margin-bottom: 5%;
-}
-
-.field {
-    padding: 10px;
-}
-
-input {
-    border: none;
-    padding: 10px 20px;
-    align-self: center;
-    margin: auto;
-    display: flex;
-    min-width: 150px;
-    border-radius: 5%;
-    /* color:  */
-}
