--- a/Login-page/src/app/register/register.component.html
+++ b/Login-page/src/app/register/register.component.html
@@ -7,19 +7,19 @@
   <mat-card-content>
     <form [formGroup]="registerForm" (ngSubmit)=onSubmit(registerForm) fxLayout="column">
       <mat-form-field class="width400" >
-        <input matInput placeholder="First first" formControlName="firstName">
+        <input matInput type="text" placeholder="First name" formControlName="firstName">
       </mat-form-field>
       <mat-form-field class="width400" >
-        <input matInput placeholder="Last name" formControlName="lastName">
+        <input matInput type="text" placeholder="Last name" formControlName="lastName">
       </mat-form-field>
       <mat-form-field class="width400" >
         <input matInput type="text" formControlName="userName" placeholder="username" >
       </mat-form-field>
       <mat-form-field class="width400" >
-        <input matInput placeholder="E-mail" formControlName="email">
+        <input matInput type="email" placeholder="E-mail" formControlName="email">
       </mat-form-field>
       <mat-form-field class="width400" >
-        <input matInput placeholder="password" formControlName="password">
+        <input matInput type="password" placeholder="password" formControlName="password">
       </mat-form-field>
       <mat-card-content>
           <p>
