--- a/Login-page/src/app/register/register.component.html
+++ b/Login-page/src/app/register/register.component.html
@@ -6,19 +6,19 @@
   </mat-card-header>
   <mat-card-content>
     <form [formGroup]="registerForm" (ngSubmit)=onSubmit(registerForm) fxLayout="column">
-      <mat-form-field class="width400" >
+      <mat-form-field >
         <input matInput type="text" placeholder="First name" formControlName="firstName">
       </mat-form-field>
-      <mat-form-field class="width400" >
+      <mat-form-field >
         <input matInput type="text" placeholder="Last name" formControlName="lastName">
       </mat-form-field>
-      <mat-form-field class="width400" >
+      <mat-form-field >
         <input matInput type="text" formControlName="userName" placeholder="username" >
       </mat-form-field>
-      <mat-form-field class="width400" >
+      <mat-form-field >
         <input matInput type="email" placeholder="E-mail" formControlName="email">
       </mat-form-field>
-      <mat-form-field class="width400" >
+      <mat-form-field >
         <input matInput type="password" placeholder="password" formControlName="password">
       </mat-form-field>
       <mat-card-content>
@@ -26,8 +26,7 @@
             By clicking the button below, you agree to the terms of service
           </p>
         </mat-card-content>
-      <button class="width400" mat-raised-button [disabled]="!registerForm.valid" type="submit">Sign Up</button>
+      <button mat-raised-button [disabled]="!registerForm.valid" type="submit">Sign Up</button>
     </form>
   </mat-card-content>
-  
 </mat-card>
