--- a/Login-page/src/app/register/register.component.html
+++ b/Login-page/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<mat-card >
+<mat-card>
   <mat-card-header>
     <mat-card-title>Sign Up</mat-card-title>
     <mat-card-subtitle>enter your details and start your journey with us.</mat-card-subtitle>
@@ -6,26 +6,53 @@
   </mat-card-header>
   <mat-card-content>
     <form [formGroup]="registerForm" (ngSubmit)=onSubmit(registerForm) fxLayout="column">
-      <mat-form-field >
+
+      <mat-form-field>
         <input matInput type="text" placeholder="First name" formControlName="firstName">
+        <mat-error *ngIf="registerForm.controls['firstName'].errors?.required &&
+  registerForm.controls['firstName'].touched">
+          First Name is
+          <strong>required</strong>
+        </mat-error>
       </mat-form-field>
-      <mat-form-field >
+
+      <mat-form-field>
         <input matInput type="text" placeholder="Last name" formControlName="lastName">
       </mat-form-field>
-      <mat-form-field >
-        <input matInput type="text" formControlName="userName" placeholder="username" >
+
+      <mat-form-field>
+        <input matInput type="text" formControlName="userName" placeholder="username">
+        <mat-error *ngIf="registerForm.controls['userName'].errors?.required &&
+  registerForm.controls['userName'].touched">
+          Username is
+          <strong>required</strong>
+        </mat-error>
       </mat-form-field>
-      <mat-form-field >
+
+      <mat-form-field>
         <input matInput type="email" placeholder="E-mail" formControlName="email">
+        <mat-error *ngIf="registerForm.controls['email'].errors?.required &&
+  registerForm.controls['email'].touched">
+          Please enter a valid email address
+        </mat-error>
+        
       </mat-form-field>
-      <mat-form-field >
+
+      <mat-form-field>
         <input matInput type="password" placeholder="password" formControlName="password">
+        <mat-error *ngIf="registerForm.controls['password'].errors?.required &&
+  registerForm.controls['password'].touched">
+          password is
+          <strong>required</strong>
+        </mat-error>
       </mat-form-field>
+
       <mat-card-content>
-          <p>
-            By clicking the button below, you agree to the terms of service
-          </p>
-        </mat-card-content>
+        <p>
+          By clicking the button below, you agree to the terms of service
+        </p>
+      </mat-card-content>
+
       <button mat-raised-button [disabled]="!registerForm.valid" type="submit">Sign Up</button>
     </form>
   </mat-card-content>
