--- a/Login-page/src/app/navbar/navbar.component.html
+++ b/Login-page/src/app/navbar/navbar.component.html
@@ -9,8 +9,8 @@
 </span>
 
 <span>
-  <a routerLink="login">
-      <button mat-button > {{ value }} </button>
+  <a routerLink="register">
+      <button mat-button > Sign Up </button>
   </a>
   
 </span>
