--- a/Login-page/src/styles.css
+++ b/Login-page/src/styles.css
@@ -8,3 +8,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 a {
     text-decoration: none;
 } */
+
+html {
+    background-color: #ffedb9;
+}
