--- a/Login-page/src/app/navbar/navbar.component.html
+++ b/Login-page/src/app/navbar/navbar.component.html
@@ -1,16 +1,24 @@
-<span>
-  <button mat-button [matMenuTriggerFor]="menu">Menu</button>
-  <mat-menu #menu="matMenu">
-  <a routerLink="profile">
-      <button mat-menu-item >Profile</button>
-  </a> 
-  <button mat-menu-item>Item 2</button>
-  </mat-menu>
-</span>
+<mat-card  [style.backgroundColor]="'orangered'"  >
+  <span>
+    <button  mat-raised-button [matMenuTriggerFor]="menu">Menu</button>
+    <mat-menu #menu="matMenu">
+      <a routerLink="profile">
+        <button mat-menu-item>Profile</button>
+      </a>
+      <button mat-menu-item>Item 2</button>
+    </mat-menu>
+  </span>
 
-<span>
-  <a routerLink="register">
-      <button mat-button > Sign Up </button>
-  </a>
-  
-</span>
+  <span>
+    <a routerLink="home">
+      <button mat-raised-button> Home </button>
+    </a>
+  </span>
+
+  <span>
+    <a routerLink="register">
+      <button mat-raised-button  > Sign Up </button>
+    </a>
+  </span>
+
+</mat-card>
