added Weather module

--- a/Login-page/src/app/navbar/navbar.component.html
+++ b/Login-page/src/app/navbar/navbar.component.html
@@ -21,4 +21,10 @@
     </a>
   </span>
 
+  <span>
+    <a routerLink="weather">
+      <button mat-raised-button  > Weather </button>
+    </a>
+  </span>
+
 </mat-card>
