unfinished weather module

--- a/Login-page/src/app/weather/add-card/add-card.component.html
+++ b/Login-page/src/app/weather/add-card/add-card.component.html
@@ -3,7 +3,7 @@
     <span class="card__title">Add city</span>
   </div>
   <div class="body__container">
-    <svg class="add__icon" id="Plus_Icon" data-name="Plus Icon" viewBox="1454.4 326.4 209.1 209.1">
+    <svg class="add__icon" (click)=addCard() id="Plus_Icon" data-name="Plus Icon" viewBox="1454.4 326.4 209.1 209.1">
       <defs>
         <style>
           .cls-299 {
