--- a/Login-page/src/app/weather/details/details.component.html
+++ b/Login-page/src/app/weather/details/details.component.html
@@ -1,5 +1,4 @@
 <div class="container" >
-    <app-weather-card></app-weather-card>
+    <app-weather-card *ngFor="let card of cards" [weatherData]="card" ></app-weather-card>
     <app-add-card></app-add-card>
-
 </div>
