--- a/Login-page/src/app/weather/ask-city/ask-city.component.html
+++ b/Login-page/src/app/weather/ask-city/ask-city.component.html
@@ -4,8 +4,8 @@
     <mat-form-field class="example-full-width">
         <input type="text" placeholder="Pick one" matInput [formControl]="name" [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let option of options" [value]="option">
-                {{option}}
+            <mat-option *ngFor="let option of options" [value]="option.name">
+                {{option.name}}
             </mat-option>
         </mat-autocomplete>
     </mat-form-field>
